Fixed problem with aspect-ratio on ios

--- a/src/components/ProjectCard/index.scss
+++ b/src/components/ProjectCard/index.scss
@@ -12,12 +12,17 @@
  
     .project-img {
         flex: 1;
-
+        position: relative;
+        display: flex;
+        max-height: 50%;
         img {
+            flex: 1;
+            display: block;
             max-width: 100%;
-            height: 100%;
             border-radius: 1rem 1rem 0 0;
-            aspect-ratio: 3/1.1;
+            //aspect-ratio: 3/1.1;
+            //object-fit: cover;
+            
         }
     }
     .project-text {
